keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__parsed-unquoted_strings.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 20
expression: vdf

---
Vdf(
  key: "OuterKey",
  value: Obj(Obj({
    "SequenceKey": [
      Str("SequenceVal"),
      Obj(Obj({})),
    ],
  })),
)
