keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__raw_strings-2.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 33
expression: buf

---
"Some\text\here"
{
	"more\text\here"	"and\here"
}

