keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__raw_strings.snap
---
source: keyvalues-parser/src/text/tests.rs
expression: vdf

---
Vdf(
  key: "Some\\text\\here",
  value: Obj(Obj({
    "more\\text\\here": [
      Str("and\\here"),
    ],
  })),
)
