keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__rendered-base_multiple.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 50
expression: rendered

---
#base "one_base.res"
#base "../another_base.vdf"
#base "other\path\sep.pop"

"Key"
{
}

