keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__rendered-base_multiple_raw_strings.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 65
expression: rendered

---
#base "one_base.res"
#base "../another_base.vdf"
#base "other\path\sep.pop"

"Some\non\escaped\text"
{
	"Unquoted\non\escaped\text"	"And\some\value"
}

