keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__rendered-base_quoted.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 50
expression: rendered

---
#base "some/base.vdf"

"Key"
{
}

