keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__rendered-base_unquoted.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 50
expression: rendered

---
#base "../some_file.pop"

"Key"
{
}

