keyvalues-parser/src/text/snapshots/keyvalues_parser__text__tests__rendered-comments.snap
---
source: keyvalues-parser/src/text/tests.rs
assertion_line: 23
expression: rendered

---
"Outer Key"
{
	"Seq Key"	"Str Val"
	"Seq Key"
	{
	}
}

